fix: fix a gap bug

--- a/style.css
+++ b/style.css
@@ -467,7 +467,7 @@ p{
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
   margin-bottom: 2rem;
 }
 
